# rust

./: system..drawio
bin_crate/: Cargo.toml
guessing_game/: Cargo.toml
guessing_game/src/: main.rs
hello-rust/: Cargo.toml
hello_cargo/: Cargo.toml
hello_cargo/src/: main.rs
hello_world/: Cargo.toml
minigrep/src/: main.rs
rustybook/01/world_hello/: Cargo.toml
rustybook/01/world_hello/src/: main.rs
rustybook/02/charpter_2_0/: Cargo.toml
rustybook/02/charpter_2_0/src/: main.rs
rustybook/02/charpter_2_1_1_varibles_value_type/: Cargo.toml
rustybook/02/charpter_2_1_1_varibles_value_type/src/: main.rs
rustybook/02/charpter_2_1_varibles/: Cargo.toml
rustybook/02/charpter_2_1_varibles/src/: main.rs
rustybook/02/charpter_compoundtype/: Cargo.toml
rustybook/02/charpter_compoundtype/src/: main.rs
rustybook/02/charpter_expr/: Cargo.toml
rustybook/02/charpter_expr/src/: main.rs
rustybook/02/charpter_func/: Cargo.toml
rustybook/02/charpter_func/src/: main.rs
rustybook/02/charpter_ownership/: Cargo.toml
rustybook/02/charpter_ownership/src/: main.rs
rustybook/02/charpter_reference/: Cargo.toml
rustybook/02/charpter_reference/src/: main.rs
rustybook/02/charpter_tuple/: Cargo.toml
rustybook/02/charpter_tuple/src/: main.rs
rustybook/02/charpter_type222/: Cargo.toml
rustybook/02/charpter_type222/src/: main.rs
rustybook/minigrep/src/: lib.rs  main.rs
variables/hello/src/: main.rs
variables/src/: main.rs
